--- a/src/css/battersea-header.less
+++ b/src/css/battersea-header.less
@@ -8,7 +8,7 @@
   border-bottom: 1px solid #e0e0e0;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 101;
   transition: transform var(--battersea-header-transition),
               opacity var(--battersea-header-transition);
   
